add example with wildCards